# Astrid-3D

./: .gitignore  CMakeLists.txt  README.md  dependencies.sh  makefile
Shaders/: fragmentShader.glsl  vertexShader.glsl
include/: animacao.hpp  asteroide.hpp  camera.hpp  cannon.hpp  disparo.hpp  espaco.hpp  primitivas.hpp  shader.hpp  textura.hpp  window.hpp
src/: animacao.cpp  asteroide.cpp  camera.cpp  cannon.cpp  disparo.cpp  espaco.cpp  main.cpp  primitivas.cpp  shader.cpp  textura.cpp  window.cpp
